--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
 </head>
 <body class="body">
 
+
+
+<!-- Прелоадер -->
+<div class="preloader">
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="preloader__image" role="img">
+        <path class="colorPre" d="M21 15.5018C18.651 14.5223 17 12.2039 17 9.5C17 6.79774 18.6534 4.48062 21 3.5C20.2304 3.17906 19.3859 3 18.5 3C15.7977 3 13.4806 4.64899 12.5 6.9956M6.9 21C4.74609 21 3 19.2889 3 17.1781C3 15.4286 4.3 13.8125 6.25 13.5C6.86168 12.0617 8.30934 11 9.9978 11C12.1607 11 13.9285 12.6589 14.05 14.75C15.1978 15.2463 16 16.4645 16 17.7835C16 19.5599 14.5449 21 12.75 21L6.9 21Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+</div>
+
+
+
 <!-- Navigation -->
 <div class="topnav" id="myTopnav">
     <a href="https://discord.com/users/964433183401713714" class="Rivi">Rivi</a>
-    <a href="https://vk.com/rea11u" class="nav">Vk</a>
+    <a href="https://rea11u.github.io/VisualTouch.Idex/" class="nav">VisualTouch</a>
     <a href="https://t.me/Rea11u" class="nav">Contact</a>
     <a href="https://github.com/Rea11u" class="nav">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -46,6 +57,7 @@
         <img src="images/Anime.png" alt="" class="image">
         <div class="Title"><span>Anime <br> Style</span></div>
         <h2 class="active">Rivi Activated</h2>
+        <h2 class="studio">The Idex Studio - 2024</h2>
 
         <!-- Crosshair SVG -->
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="80px" height="80px" viewBox="0 0 800.000000 800.000000" preserveAspectRatio="xMidYMid meet" class="crosshair1"><g transform="translate(0.000000,800.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none"><path d="M0 6615 l0 -1386 123 3 122 3 3 1258 2 1257 1255 0 1255 0 0 125 0 125 -1380 0 -1380 0 0 -1385z"/><path d="M5240 7875 l0 -125 1255 0 1255 0 2 -1257 3 -1258 123 -3 122 -3 0 1386 0 1385 -1380 0 -1380 0 0 -125z"/><path d="M3880 4495 l0 -375 -375 0 -375 0 0 -125 0 -125 375 0 375 0 0 -375 0 -375 125 0 125 0 0 375 0 375 375 0 375 0 0 125 0 125 -375 0 -375 0 0 375 0 375 -125 0 -125 0 0 -375z"/><path d="M0 1385 l0 -1385 1380 0 1380 0 0 125 0 125 -1255 0 -1255 0 -2 1258 -3 1257 -122 3 -123 3 0 -1386z"/><path d="M7757 2763 c-4 -3 -7 -570 -7 -1260 l0 -1253 -1255 0 -1255 0 0 -125 0 -125 1380 0 1380 0 0 1385 0 1385 -118 0 c-65 0 -122 -3 -125 -7z"/></g></svg>
@@ -116,6 +128,40 @@
     <a href="https://www.pinterest.ca/RiviMyav/">Pinterest</a>
 </div>
 
-<script url="javascript/nav.js"></script>
+<!-- VK -->
+
+<div class="VK">
+    <svg class="VKmedia" fill="#000000" width="60px" height="60px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm3.692 10.831s.849.838 1.058 1.227c.006.008.009.016.011.02.085.143.105.254.063.337-.07.138-.31.206-.392.212h-1.5c-.104 0-.322-.027-.586-.209-.203-.142-.403-.375-.598-.602-.291-.338-.543-.63-.797-.63a.305.305 0 0 0-.095.015c-.192.062-.438.336-.438 1.066 0 .228-.18.359-.307.359h-.687c-.234 0-1.453-.082-2.533-1.221-1.322-1.395-2.512-4.193-2.522-4.219-.075-.181.08-.278.249-.278h1.515c.202 0 .268.123.314.232.054.127.252.632.577 1.2.527.926.85 1.302 1.109 1.302a.3.3 0 0 0 .139-.036c.338-.188.275-1.393.26-1.643 0-.047-.001-.539-.174-.775-.124-.171-.335-.236-.463-.26a.55.55 0 0 1 .199-.169c.232-.116.65-.133 1.065-.133h.231c.45.006.566.035.729.076.33.079.337.292.308 1.021-.009.207-.018.441-.018.717 0 .06-.003.124-.003.192-.01.371-.022.792.24.965a.216.216 0 0 0 .114.033c.091 0 .365 0 1.107-1.273a9.718 9.718 0 0 0 .595-1.274c.015-.026.059-.106.111-.137a.266.266 0 0 1 .124-.029h1.781c.194 0 .327.029.352.104.044.119-.008.482-.821 1.583l-.363.479c-.737.966-.737 1.015.046 1.748z"/></svg>
+    <a href="https://www.pinterest.ca/RiviMyav/">VK</a>
+</div>
+
+<!-- HTML code -->
+<div class="codeH">
+    <img class="html" src="images/html.jpeg" alt="">
+</div>
+
+<div class="ani" style="display: none;">
+    <img class="rimuru" src="images/b.png" alt="">
+</div>
+
+<script>
+    function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
+<script>
+    window.onload = function () {
+      document.body.classList.add('loaded_hiding');
+      window.setTimeout(function () {
+        document.body.classList.add('loaded');
+        document.body.classList.remove('loaded_hiding');
+      }, 500);
+    }
+  </script>
 </body>
 </html>
