--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Site title-->
     <title>Rivux</title>
     <!-- Import CSS -->
     <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="android.css">
     <!-- Ubuntu font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +35,7 @@
 
 <!-- Navigation -->
 <div class="topnav" id="myTopnav">
-    <a href="https://discord.com/users/964433183401713714" class="Rivi">Rivi</a>
+    <a href="https://discord.com/users/964433183401713714" class="Rivi">Rivux</a>
     <a href="https://rea11u.github.io/VisualTouch.Idex/" class="nav">VisualTouch</a>
     <a href="https://t.me/Rea11u" class="nav">Contact</a>
     <a href="https://github.com/Rea11u" class="nav">About</a>
@@ -65,6 +65,8 @@
         <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80px" height="80px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve" class="heart"><path fill="#231F20" d="M47.977,5.99c-4.416,0-8.414,1.792-11.308,4.686l-4.685,4.654l-4.686-4.654 C24.406,7.782,20.408,5.99,15.992,5.99C7.161,5.99,0,13.15,0,21.982c0,4.416,2.85,8.539,5.747,11.432l23.41,23.414 c1.562,1.562,4.092,1.562,5.653,0l23.349-23.352c2.896-2.893,5.81-7.078,5.81-11.494C63.969,13.15,56.808,5.99,47.977,5.99z"/></svg>
         <!-- Points SVG -->
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="434.000000pt" height="246.000000pt" viewBox="0 0 434.000000 246.000000" preserveAspectRatio="xMidYMid meet" class="points"><g transform="translate(0.000000,246.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none"><path d="M178 2294 c-15 -8 -35 -28 -44 -45 -48 -95 81 -185 157 -110 49 50 35 122 -31 156 -36 18 -47 18 -82 -1z"/><path d="M1164 2300 c-30 -12 -64 -58 -64 -87 0 -87 94 -132 159 -77 25 21 31 33 31 66 0 52 -14 77 -55 94 -39 16 -42 16 -71 4z"/><path d="M2143 2295 c-40 -17 -67 -66 -58 -105 8 -38 59 -80 95 -80 34 0 85 41 94 75 10 40 -18 94 -58 110 -41 18 -33 18 -73 0z"/><path d="M3122 2295 c-38 -17 -66 -71 -56 -110 3 -14 20 -36 36 -50 42 -35 87 -33 128 5 29 27 32 35 27 72 -10 73 -72 111 -135 83z"/><path d="M4104 2296 c-69 -30 -85 -106 -35 -157 32 -31 71 -38 115 -18 23 11 56 62 56 89 0 28 -34 73 -65 86 -40 16 -32 16 -71 0z"/><path d="M163 1306 c-39 -33 -47 -66 -29 -111 11 -25 26 -40 51 -51 45 -18 78 -10 110 28 51 60 18 144 -61 155 -33 4 -45 1 -71 -21z"/><path d="M1150 1317 c-54 -27 -65 -100 -22 -148 21 -24 36 -31 64 -31 64 0 98 32 100 93 2 77 -72 122 -142 86z"/><path d="M2134 1318 c-12 -5 -30 -27 -39 -47 -15 -34 -15 -41 -2 -74 18 -41 42 -57 89 -57 66 0 112 62 88 120 -25 60 -83 84 -136 58z"/><path d="M3114 1319 c-60 -31 -62 -138 -3 -170 12 -6 38 -11 57 -11 28 0 43 7 65 32 25 28 28 39 24 73 -3 22 -14 49 -25 59 -23 23 -88 32 -118 17z"/><path d="M4094 1320 c-54 -22 -70 -100 -29 -148 45 -53 128 -44 160 18 41 80 -45 165 -131 130z"/><path d="M182 335 c-21 -9 -38 -27 -48 -50 -20 -49 1 -100 51 -121 45 -18 78 -10 110 28 33 39 32 80 -2 117 -34 37 -68 45 -111 26z"/><path d="M1153 330 c-76 -46 -69 -132 14 -167 31 -12 38 -12 71 4 68 34 74 124 9 163 -40 25 -54 25 -94 0z"/><path d="M2134 331 c-17 -10 -37 -33 -44 -51 -18 -43 6 -94 55 -117 33 -16 37 -16 70 0 49 23 73 74 55 117 -13 32 -62 70 -90 70 -8 0 -29 -9 -46 -19z"/><path d="M3114 331 c-66 -40 -61 -129 9 -166 l37 -20 37 20 c74 39 80 118 14 162 -41 28 -57 28 -97 4z"/><path d="M4104 340 c-31 -12 -64 -59 -64 -91 0 -34 41 -85 75 -93 14 -4 41 0 60 8 78 33 78 139 1 171 -40 17 -43 17 -72 5z"/></g></svg>
+        <!-- Crosshair mobile SVG -->
+        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="80px" height="80px" viewBox="0 0 800.000000 800.000000" preserveAspectRatio="xMidYMid meet" class="cross"><g transform="translate(0.000000,800.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none"><path d="M0 6615 l0 -1386 123 3 122 3 3 1258 2 1257 1255 0 1255 0 0 125 0 125 -1380 0 -1380 0 0 -1385z"/><path d="M5240 7875 l0 -125 1255 0 1255 0 2 -1257 3 -1258 123 -3 122 -3 0 1386 0 1385 -1380 0 -1380 0 0 -125z"/><path d="M3880 4495 l0 -375 -375 0 -375 0 0 -125 0 -125 375 0 375 0 0 -375 0 -375 125 0 125 0 0 375 0 375 375 0 375 0 0 125 0 125 -375 0 -375 0 0 375 0 375 -125 0 -125 0 0 -375z"/><path d="M0 1385 l0 -1385 1380 0 1380 0 0 125 0 125 -1255 0 -1255 0 -2 1258 -3 1257 -122 3 -123 3 0 -1386z"/><path d="M7757 2763 c-4 -3 -7 -570 -7 -1260 l0 -1253 -1255 0 -1255 0 0 -125 0 -125 1380 0 1380 0 0 1385 0 1385 -118 0 c-65 0 -122 -3 -125 -7z"/></g></svg>    
     </div>
 
 </div>
@@ -119,6 +121,13 @@
     <h1 class="Myav">Rivi Myav</h1>
     <h3 class="text">In a world where darkness tries to absorb light, every good deed becomes a ray of hope.</h3>
     <div class="hello"><h2 class="hi">Fine! Hello!</h2></div>
+</div>
+
+<!-- Mobile profile -->
+<div class="ProfileM">
+    <img src="images/Profile.jpeg" alt="" class="Mimg">
+    <h1 class="name">Rivi</h1>
+    <h3 class="textM">In a world where darkness tries to absorb light</h3>
 </div>
 
 <!-- Pinterest -->
