--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="images/" sizes="32x32" href="images/Logo.jpg">
     <link rel="icon" type="images/" sizes="16x16" href="images/Logo.jpg">
 </head>
-<body>
+<body class="body">
 
 
 
